--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ python:
         - "3.6"
 before_install:
         - pip install pytest pytest-cov
+        - pip isntall codecov
 script:
-        - pytest
+        - pytest --cov=./
+after_success:
+        - codecov
